# tokimo-app-mail

./: Cargo.toml  README.md  lefthook.yml  tokimo-app.toml
docs/: README.md
migrations/: 20260521000001__init.up.sql
skills/mail-manage-accounts/: SKILL.md
skills/mail-read-inbox/: SKILL.md
skills/mail-search/: SKILL.md
skills/mail-send/: SKILL.md
skills/manage-accounts/: SKILL.md
skills/read-inbox/: SKILL.md
skills/search/: SKILL.md
skills/send/: SKILL.md
src/: app_server.rs  assets.rs  cli.rs  ctx.rs  error.rs  lib.rs  main.rs  mod.rs  router.rs  scheduler.rs
src/db/: mod.rs
src/db/entities/: mail_accounts.rs  mail_attachments.rs  mail_folders.rs  mail_messages.rs  mod.rs
src/handlers/: accounts.rs  folders.rs  messages.rs  mod.rs
src/repos/: accounts.rs  folders.rs  messages.rs  mod.rs
src/scheduler/tasks/: mail_body_fetch.rs  mail_sync.rs
src/services/: accounts.rs  body_fetch.rs  folders.rs  idle.rs  messages.rs  mod.rs  sync.rs
tests/: export_bindings.rs
ui/: .pnpmfile.cjs  package.json  pnpm-lock.yaml
ui/src/: MailApp.tsx  index.tsx  manifest.ts  modal-bridge.ts
ui/src/components/: AccountEditDialog.tsx  AccountEditWindow.tsx  AccountSetup.tsx  AccountSetupWindow.tsx  MailAccountStrip.tsx  MailComposer.tsx  MailComposerWindow.tsx  MailFolderPanel.tsx  MailList.tsx  MailSidebar.tsx  MailViewer.tsx
ui/src/hooks/: useMailAccounts.ts
ui/src/i18n/: index.tsx
ui/src/i18n/locales/en-US/: mail.ts
ui/src/i18n/locales/ja-JP/: mail.ts
ui/src/i18n/locales/zh-CN/: mail.ts
ui/src/lib/: dateFormat.ts  modal-window.ts  providers.tsx  query-client.ts  shell-context.ts  use-container-width.ts  ws.ts
ui/src/pages/: MailApp.tsx
